feat: simplificando lógica de negócio